--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -154,6 +154,9 @@
                                 <a class="menu-bar-link" href="https://www.linkedin.com/company/hacktricks" target="_blank">
                                     Linkedin
                                 </a>
+                                <a class="menu-bar-link" href="https://tools.hacktricks.wiki/" target="_blank">
+                                    HT Tools
+                                </a>
                                 <a class="menu-bar-link" href="https://github.com/sponsors/carlospolop" target="_blank">
                                     Sponsor
                                 </a>
@@ -165,6 +168,7 @@
                                         <a href="https://training.hacktricks.xyz" target="_blank" role="menuitem" class="menu-bar-link">Hacktricks Training</a>
                                         <a href="https://twitter.com/hacktricks_live" target="_blank" role="menuitem" class="menu-bar-link">Twitter</a>
                                         <a href="https://www.linkedin.com/company/hacktricks" target="_blank" role="menuitem" class="menu-bar-link">Linkedin</a>
+                                        <a href="https://tools.hacktricks.wiki/" target="_blank" role="menuitem" class="menu-bar-link">HT Tools</a>
                                         <a href="https://github.com/sponsors/carlospolop" target="_blank" role="menuitem" class="menu-bar-link">Sponsor</a>
                                     </div>
                                 </div>
