--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -342,20 +342,18 @@
         </script>
         {{/if}}
 
-        {{#if google_analytics}}
         <!-- Google Analytics Tag (GA4) -->
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', '{{google_analytics}}');
+            gtag('config', 'G-DSTYJWERH0');
 
             var gtagScript = document.createElement('script');
             gtagScript.async = true;
-            gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id={{google_analytics}}';
+            gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-DSTYJWERH0';
             document.head.appendChild(gtagScript);
         </script>
-        {{/if}}
 
         {{#if playground_line_numbers}}
         <script>
