fix ad in mobile version

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -202,6 +202,10 @@
                                 </button>
                                 {{/if}}
 
+                                <label id="mobile-toc-toggle" class="icon-button mobile-toc-toggle" for="sidebar-toggle-anchor" title="Open Table of Contents" aria-label="Open Table of Contents">
+                                    <span class="mobile-toc-icon" aria-hidden="true">📚</span>
+                                </label>
+
                                 <div id="menubar-languages-toggle" class="icon-button" type="button" title="Translations" aria-label="Toggle Tanslations" aria-expanded="false" aria-controls="translations">
                                     <i class="fa fa-globe"></i>
                                     <span class="menu-bar-link">Translations</span>
