Test hbs invalidation

--- a/theme/toc.js.hbs
+++ b/theme/toc.js.hbs
@@ -83,3 +83,4 @@ class MDBookSidebarScrollbox extends HTMLElement {
     }
 }
 window.customElements.define("mdbook-sidebar-scrollbox", MDBookSidebarScrollbox);
+// Cache invalidation test: hbs change
