--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -385,11 +385,11 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'G-8QHENNPT4B');
+            gtag('config', 'G-DSTYJWERH0');
 
             var gtagScript = document.createElement('script');
             gtagScript.async = true;
-            gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-8QHENNPT4B';
+            gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-DSTYJWERH0';
             document.head.appendChild(gtagScript);
         </script>
 
@@ -531,9 +531,6 @@
         {{#each additional_js}}
         <script src="{{ ../path_to_root }}{{this}}"></script>
         {{/each}}
-
-        <!-- Custom analytics -->
-        <script defer src="https://www.fairanalytics.de/pixel/deXeO7BNBrMuhdG1"></script>
 
         <script>
             (function initParticles() {
